Los estilos que no estaban siendo usados, fueron eliminados

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       property="og:image"
       content="https://leonidasesteban.github.io/curso-esencial-html-css/images/dom.png"
     />
-
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -105,49 +104,6 @@
   </head>
   <body>
     <div class="hero"></div>
-
-    <!-- <div class="title">
-      <div class="wrapper">
-        <div class="title-content">
-          <h1>
-            Curso esencial de HTML y CSS
-          </h1>
-          <p>
-            Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de
-            contenidos,
-            en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="services">
-      <div class="wrapper">
-        <div class="services-content">
-          <h1>
-            Curso esencial de HTML y CSS
-          </h1>
-          <p>
-            Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de
-            contenidos,
-            en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="pricing">
-      <div class="wrapper">
-        <div class="pricing-content">
-          <h1>
-            Curso esencial de HTML y CSS
-          </h1>
-          <p>
-            Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de
-            contenidos,
-            en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
-          </p>
-        </div>
-      </div>
-    </div> -->
     <div class="header">
       <div class="wrapper">
         <div class="header-content">
@@ -387,7 +343,7 @@
             </ul>
           </section>
           <div class="section-content">
-            <h2>Hola estos son algunos videos muy lindos</h2>
+            <h2>Hola, estos son algunos videos muy lindos</h2>
             <div class="slider">
               <scroll-container class="slider-container">
                 <scroll-page class="slider-slide" id="video-1">
@@ -438,12 +394,6 @@
           <div class="section-content">
             <h2>Ingresa a nuestor newsletter</h2>
             <form action="#" class="form">
-              <!-- <select name="" id="">
-                <option value="">curso 1</option>
-                <option value="">curso 2</option>
-              </select>
-              <input type="checkbox">
-              <input type="radio"> -->
               <input type="text" required placeholder="Nombre" />
               <input type="email" required placeholder="Correo Electrónico" />
               <input type="submit" value="Suscribirme" />
